# base-abou-cpp

./: .gitignore  README.md
0/: README.md
1/: README.md
1/use_cmake/: CMakeLists.txt  main.cpp
1/use_cmake/src/: hello.h
1/use_gcc/: build.bat  main.cpp
1/use_gcc/src/: hello.cpp
2/: CMakeLists.txt  README.md  build-mingw.bat  build-msvc.bat  build.sh  main.cpp  test.bat  test.sh
2/base/: base.h
2/list/: list.cpp  list.h
2/src/: CMakeLists.txt  Hello  hello.cpp
2/src/en/: hello_en.h
2/src/zh/: hello_zh.h
2/test/: CMakeLists.txt  main.cpp
3/: CMakeLists.txt  README.md  build.bat  build.sh  test.bat  test.sh
3/src/: CMakeLists.txt  README.md
3/src/hello/: hello.h  lzl.h
3/src/inc/: pair
3/src/lib/: lzl_pair.h
3/test/: test.cpp  test.h
4/: .clang-format  README.md  build.bat  test.bat
4/src/: CMakeLists.txt  README.md
4/src/hello/: hello.cpp  world.h
4/src/inc/: array_deque  array_stack  deque  list_deque  list_queue  list_stack  queue  stack
4/src/lib/: lzl_array_deque.h  lzl_array_stack.h  lzl_base_array.h  lzl_base_cap.h  lzl_base_list.h  lzl_deque.h  lzl_limits.h  lzl_list_deque.h  lzl_list_queue.h  lzl_list_stack.h  lzl_pair.h  lzl_queue.h  lzl_relops.h  lzl_stack.h
4/src/lib/utils/: math.h  throw_if.cpp  throw_if.h  to_string.cpp  to_string.h
4/test/: CMakeLists.txt  main.cpp  test.cpp  test.h
